--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "recharts": "^3.7.0",
     "swr": "^2.4.0",
     "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "ws": "^8.19.0"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.18.1"
   }
 }
